# Engine

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: format.yml
libraries/platform/: CMakeLists.txt
libraries/platform/include/: platform_console.h  platform_memory.h  platform_window.h
libraries/platform/src/: platform_detection.h
libraries/platform/src/win32/: platform_console_win32.c  platform_memory_win32.c  platform_window_win32.c
modules/: CMakeLists.txt
modules/application/: CMakeLists.txt
modules/application/include/: application.h  entry.h  game.h
modules/application/src/: application.c
modules/renderer/: CMakeLists.txt
modules/renderer/include/: renderer.h
modules/renderer/src/: renderer.c  vulkan_setup.c  vulkan_setup.h  vulkan_state.h
modules/renderer/test/: main.c
shared/: CMakeLists.txt  api.h  size_helpers.h  types.h
testbed/: CMakeLists.txt  testbed.c
